# email-analysis-data-diary

./: .gitignore  README.md  form_eml_data.py  pyproject.toml  requirements.txt
analysis/: Email-Fundraising-Analysis.ipynb
email_analysis/: display.py  tokenize.py
tests/: test_email_analysis.py
