[tool.poetry]
name = "email-analysis"
version = "0.1.0"
description = ""
authors = ["Max Lee <maxbmhlee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
text-data = {version = "^0.1.0", extras = ["display"]}
eml-parser = "^1.14.3"
pandas = "^1.1.3"
ipykernel = "^5.3.4"
nltk = "^3.5"
commonregex = "^1.5.3"
altair = "^4.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
